# ConsensAI

./: .gitignore  README.md  package-lock.json
backend/: .gitignore  config.template.yaml  pyproject.toml
backend/app/: config.py  deps.py  main.py  models.py  sio.py  types.py
backend/app/core/: attendee_manager.py  auth.py  db.py  meeting_agent.py  meeting_agent_gamma.py  meeting_agent_summary.py  meeting_manager.py  meeting_recorder.py  parsed_issues.py  user_manager.py  util.py  utils_echo.py
backend/app/core/agent/: agent_realtime.py  constants.py  models.py  parser.py  utils.py
backend/app/core/asr/: models.py  utils.py
backend/app/core/sio/: models.py  sio_server.py
backend/app/prompts/autodoc/: summary.hprompt
backend/app/prompts/echomind/: heuristic.hprompt  issue.hprompt  position.hprompt
backend/app/routes/: __init__.py  meetings.py  users.py
backend/app/utils/: __init__.py  log.py  spa.py
backend/scripts/: format.sh  gen_client.sh  gen_models.sh  lint.sh
frontend/: .gitignore  eslint.config.js  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/@types/: i18next.d.ts  resources.ts
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/components/: CardList.tsx  Flow.tsx  InspirationCard.tsx  IssuePositionNode.tsx  JoinModal.tsx  LanguagePicker.tsx  Player.tsx  Recorder.tsx  SilenceTimer.tsx  SummaryPoints.tsx
frontend/src/hooks/: useMeeting.ts  useValueChange.ts
frontend/src/i18n/: en.json  index.ts  zh.json
frontend/src/lib/: audiorecorder.ts  (+7 more)
(+15 files in other folders)
